fix(brand): icon vertical shift
Change brand icon vertical shift according to the layout

--- a/src/styles/brand.scss
+++ b/src/styles/brand.scss
@@ -5,7 +5,7 @@
 	color: conf.$mine-shaft;
 	font-size: 56.3667px;
 	line-height: 0;
-	transform: translateY(#{math.div(4, 56.3667) * -1em}); // ~ -4px, 56.3667 height in the layout
+	transform: translateY(#{math.div(5, 56.3667) * -1em}); // ~ -4px, 56.3667 height in the layout
 
 	&:any-link {
 		color: conf.$mine-shaft;
